global/bots4devsupport/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-service
  namespace: slack-user-sync
spec:
  type: NodePort
  selector:
    app: chatbot
  ports:
  - protocol: TCP
    port: 8501
    targetPort: 8501
