global/bots4devsupport/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ingress
  namespace: slack-user-sync
  annotations:
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/auth-url: "https://auth-internal.ap-jp-2.cloud.sap/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth-internal.ap-jp-2.cloud.sap/oauth2/start"
    nginx.ingress.kubernetes.io/auth-request-redirect: $escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: "Authorization, X-Auth-Request-Email, X-Auth-Request-User, X-Forwarded-Access-Token"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: kube-system/ingress-cacrt
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "optional"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "3"
    disco: "true"
spec:
  tls:  
  - hosts:
    - chatbot.devsupport.ap-jp-2.cloud.sap
    secretName: chatbot-tls-secret
  rules:
  - host: chatbot.devsupport.ap-jp-2.cloud.sap
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatbot-service
            port:
              number: 8501
